# small-project

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/small_project/: __init__.py  ops.py
tests/: test_ops.py
