[project]
name = "small-project"
version = "0.1.0"
description = "Small project"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/small_project"]

[tool.uv]
managed = true

[dependency-groups]
dev = ["pytest>=8"]
